--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,11 +1,21 @@
 .container {
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	height: 100px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .logo {
-    font-size: 30px;
-    font-weight: bold;
+	font-size: 30px;
+	font-weight: bold;
+	display: flex;
+	flex-direction: row;
+}
+
+.firstName {
+	color: coral;
+}
+
+.lastName {
+	color: rgb(224, 68, 16);
 }
